--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,118 @@
-#nav{
-    background-color: #F781F3;
-    
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
+h2 {
+  vertical-align: center;
+  text-align: center;
+}
+.logo{
+    font-weight: bold;
+    font-size: 30px;
+    color: black;
+}
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #F781F3;
+  background: linear-gradient(to left, #F781F3, #fec1ef);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #FFF;
+  height: 50px;
+  padding: 1em;
+  margin-bottom: 10px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+
+
+#nav-main{
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #F781F3;
+    margin-bottom: 10px;
+}
+
+.nav-buttons{
+    display: flex;
+    gap: 10px;
+}
+
+.nav-buttons button{
+    padding: 2px;
+
+}
+
+#nav-main h2 {
+    display: inline-block;
+}
+
 
 ul{
     list-style: none;
@@ -9,5 +120,24 @@ ul{
 
 a{
     text-decoration: none;
-    color: black
+    color: white
+}
+
+.hero{
+    display: flexbox;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+}
+.hero>*:not(:last-child){
+    margin-bottom: 10px;
+}
+.hero-main{
+    font-size: larger;
+}
+.hero-cta{
+    padding: 5px;
+
 }
