--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ h2 {
   color: #FFF;
   height: 50px;
   padding: 1em;
-  margin-bottom: 10px;
+
 }
 
 .menu {
@@ -125,6 +125,11 @@ a{
 .centered{
     text-align:center;
 }
+.hero-container{
+    width: 100%;
+    background-color: #fec1ef;
+    padding: 30px 0;
+}
 .hero{
     display: flexbox;
     flex-direction: column;
@@ -142,6 +147,16 @@ a{
 .hero-cta{
     padding: 5px;
 
+}
+
+.info-container>*:not(:nth-child()){
+    margin-bottom: 20px;
+
+}
+
+.info-container>img{
+    width: 50px;
+    margin: 20px;
 }
 
 .footer-clean {
