--- a/src/stylesMobile.css
+++ b/src/stylesMobile.css
@@ -1,3 +1,15 @@
+:root {
+  --font-raleway:'Raleway', sans-serif;
+  --font-inter:'Inter', sans-serif;
+  --color-primary: #fec1ef;
+  --color-secondary: #F781F3;
+  --color-accent: #ee71e8;
+  --black: #201e1c;
+  --grey: #bababa;
+  --white: #fff;
+  --off-white: #f0edeb;
+}
+
 @media (max-width: 700px) {
     .menu-button-container {
       display: flex;
@@ -20,7 +32,7 @@
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ .menu li {
-      border: 1px solid #e03fd8;
+      border: 1px solid var(--color-accent);
       height: 2.5em;
       padding: 0.5em;
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -31,10 +43,31 @@
       margin: 0;
       padding: 0.5em 0;
       width: 100%;
-      color: white;
+      color: var(--white);
       background-color: #F781F3;
     }
     .menu > li:not(:last-child) {
-      border-bottom: 1px solid #e03fd8;
+      border-bottom: 1px solid var(--color-accent);
+    }
+    .info-container{
+      grid-template-columns: 1fr;
+    }
+
+    footer{
+      padding: 20px 30px;
+    }
+
+    footer>div>ul>li{
+      display: block;
+    }
+
+    .login-wrapper{
+      background-color: white;
+    }
+    
+    .login-card{
+      padding: 40px;
+      height: 100%;
+      width: 100%;
     }
   }
