--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@
     box-sizing: border-box;
     font-family: var(--font-raleway);
 }
+
 .page-container{
   max-width: 2000px;
 }
@@ -149,6 +150,7 @@ ul{
     padding: 30px 0;
 }
 .hero{
+    padding: 100px 0;
     display: flexbox;
     flex-direction: column;
     width: 50%;
